# todolist

./: .ci-env  .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: action.yaml
pgdata/: postmaster.pid
pgdata/base/13769/: 2619  pg_internal.init
pgdata/base/16384/: 1249  16391  16397  16399  16405  16413  16421  16428  16429  16442  16452  16455  16461  16467  16470  16482  16484  16496  16497  16504  16505  16517  16523  16526  2606  2608  2610  2658  2659  2704  pg_internal.init
pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pgdata/pg_stat/: db_0.stat  db_16384.stat  global.stat
pgdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
tests/: test_categories.py  test_goals.py
todolist/bot/: admin.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py  models.py
todolist/bot/tg/fsm/: base.py  memory_storage.py
todolist/core/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
todolist/tests/: simple_test.py  test_categories.py  test_goals.py
todolist/todolist/: settings.py  urls.py
